[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://player/sprites/player_swim_0000.png" type="Texture" id=2]
[ext_resource path="res://player/sprites/player_swim_0002.png" type="Texture" id=3]
[ext_resource path="res://player/sprites/player_swim_0001.png" type="Texture" id=4]
[ext_resource path="res://player/Player.gd" type="Script" id=5]
[ext_resource path="res://player/Bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://player/sprites/player_eye.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "swim",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.9924
height = 13.4922

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "grow"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0, 0 ) ]
}

[node name="Player" type="Area2D"]
z_index = 5
gravity = 0.0
collision_layer = 9
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "swim"
frame = 1
playing = true

[node name="Eye" type="Sprite" parent="."]
position = Vector2( 0, -6.846 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
bus = "Sound Effects"

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 3 )
anims/grow = SubResource( 4 )
anims/shrink = SubResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
